<resources>
    <string name="app_name">AndroidInterviewPrep</string>
    <string name="fragments">Fragments</string>
    <string name="change">Change</string>
    <string name="pageradapters">FragmentStateAdapter</string>
    <string name="add_below_fragment_stack">Add Below Fragment Stack</string>
    <string name="FragmentBackStack">FragmentBackStack</string>
    <string name="customview">Draw Custom View</string>
    <string name="touchevent">Touch Event</string>
    <string name="touch">Click Anywhere &amp; Button to Check</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="github_code_link"> Get code of this app at github.com/sumitkrnitjsr/AndroidInterviewPrep </string>
    <string name="dialog_toast">DIALOG TOAST</string>
    <string name="dialog">Dialog</string>
    <string name="Agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="broadcast">Broadcast</string>
    <string name="global_broadcast">Global Broadcast</string>
    <string name="local_broadcast">Local Broadcast</string>
    <string name="broadcastreceiver">BROADCASTRECEIVER</string>
    <string name="service">SERVICE</string>
    <string name="background_service">Background Service</string>
    <string name="bind_service">BIND SERVICE</string>
    <string name="unbind_service">UNBIND SERVICE</string>
    <string name="toast_bound_service">TOAST FROM BOUND SERVICE</string>
    <string name="spawn_unlimited_threads">Spawn Unlimited Threads</string>
    <string name="thread">THREADS</string>
    <string name="memory_leak">MEMORY LEAK</string>
    <string name="shared_pref">SHARED PREFERENCE</string>
    <string name="enc_shared_pref">ENCRYPTED SHARED PREF</string>
    <string name="advanced_android">Advanced Concepts</string>
    <string name="lifecycle_dumb">Dumb Lifecycle</string>
    <string name="txt_dumb_timer">Try Home Key and Back Key With This Activity</string>
    <string name="lifecycle_aware">"Lifecycle Aware "</string>
    <string name="viewmodel_livedata">ViewModel LiveData</string>
    <string name="rx_txt">Rx Basic</string>
    <string name="enter_search_term">Enter Search Term Here</string>
    <string name="rx_search">Rx Search Activity</string>
    <string name="rx_room_dagger">Rx_Room_Dagger_Activity</string>
    <string name="rxdaggerroom_guide_text">Press Home and Then Open from Recent to View Changes</string>
    <string name="txt_retrofit">Retrofit</string>
</resources>